crates/ars-components/src/specialized/timer/snapshots/ars_components__specialized__timer__tests__timer_start_trigger_paused_snapshot.snap
---
source: crates/ars-components/src/specialized/timer/mod.rs
expression: "snapshot_attrs(&countdown_api(State::Paused, 30).start_trigger_attrs())"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "start-trigger",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "timer",
            ),
        ),
        (
            Aria(
                Label,
            ),
            String(
                "Resume timer",
            ),
        ),
        (
            Type,
            String(
                "button",
            ),
        ),
    ],
    styles: [],
}
